--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,37 @@ main div.content div.title {
     margin: 0 0 50px 0;
 }
 
+main div.title {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+main div.title h1 {
+    font-weight: bolder;
+    font-size: 32px;
+    color: #111111;
+}
+
+main div.title div.description {
+    margin: 117px 0 0 60px;
+}
+
+main div.title div.image {
+    align-self: end;
+    justify-self: end;
+    margin-right: 100px;
+}
+
+main div.title p {
+    opacity: 0.7;
+    font-size: 18px;
+    color: #000000;
+    line-height: 28px;
+    max-width: 316px;
+    max-height: 84px;
+    padding-top: 10px;
+}
+
 main div.mostViewed h1 {
     font-weight: bold;
     font-size: 24px;
