--- a/css/style.css
+++ b/css/style.css
@@ -27,20 +27,23 @@ header {
 }
 
 header div.links {
-    text-align: center;
-    margin: 0 557.4px 0 0;
+    margin: 0px 29.8% 0 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
 header div.links a.page {
-    margin: 0 30px 0 0;
+    margin-right: 30px;
     color: #111111;
     font-size: 16px;
     line-height: 19px;
     text-decoration: none;
+    align-self: center;
 }
 
 header div.links a img {
-    margin: 0px 122.4px 0px 0px;
+    margin-right: 120px;
 }
 
 /***MAIN CONTENT***/
@@ -50,7 +53,6 @@ main {
 }
 
 main div.content {
-    margin: 0px 231px 0px 231px;
     display: grid;
     grid-template-rows: auto;
 }
@@ -153,7 +155,12 @@ footer .copyright span {
 
 /**ABOUT PAGE**/
 
-header div.links.aboutLinks a.page.about {
+header.about {
+    padding: 36.1px 0 50px 0;
+    justify-self: stretch;
+}
+
+header div.links.aboutLinks a.page.bold {
     font-weight: bold;
 }
 
@@ -180,4 +187,8 @@ main div.content p {
     font-size: 18px;
     color: #444444;
     line-height: 28px;
+}
+
+main div.content div.text p {
+    text-align: justify;
 }
